force-app/main/default/objects/LIFO_Update__e/LIFO_Update__e.object-meta.xml
<CustomObject>
    <description>obsolete</description>
    <label>zzzLIFO Update</label>
    <pluralLabel>LIFO Updates</pluralLabel>
</CustomObject>