force-app/main/default/objects/LIFO_Update__e/fields/DIV_ID__c.field-meta.xml
<CustomField>
    <fullName>DIV_ID__c</fullName>
    <label>DIV ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>