force-app/main/default/objects/LIFO_Update__e/fields/ITEM_ID__c.field-meta.xml
<CustomField>
    <fullName>ITEM_ID__c</fullName>
    <label>ITEM ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>