force-app/main/default/objects/LIFO_Update__e/fields/QTY__c.field-meta.xml
<CustomField>
    <fullName>QTY__c</fullName>
    <label>QTY</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>