force-app/main/default/objects/LIFO_Update__e/fields/RCPT_NO__c.field-meta.xml
<CustomField>
    <fullName>RCPT_NO__c</fullName>
    <label>RCPT_NO</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>