force-app/main/default/objects/LIFO_Update__e/fields/TXN_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TXN_TYPE__c</fullName>
    <label>TXN_TYPE</label>
    <length>16</length>
    <type>Text</type>
</CustomField>